Adicionando rota Health no swagger
